--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^4.15.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "generate-password": "^1.7.0"
   }
 }
