--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "csvtojson": "^2.0.10",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fast-xml-parser": "^4.2.5",
     "generate-password": "^1.7.0"
   }
 }
